# fine-tuning

./: .gitignore  CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  main.py  mlx.py  model_manager.py  pyproject.toml  start.sh  test_setup.sh  更新说明_v1.1.md
mlx/: split_dataset.py  train.py  use_model.py
static/: index.html
