[project]
name = "model-comparison-tool"
version = "1.0.0"
description = "Fine-tuned Model Comparison Tool - Compare two local models side by side"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0",
    "mlx-lm>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]

